--- a/index.html
+++ b/index.html
@@ -2,11 +2,41 @@
 <html>
 <head>
     <title>Andrew Chang</title>
-    
-</head>
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-<body>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+</head>
     
+<body>
+    <header>
+        <div class="container">
+            <div class="row">
+                <nav>
+                    <ul>
+                        <li><a href="">About Me</a></li>
+                        <li><a href="">Experience</a></li>
+                        <li><a href="">Projects</a></li>   
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <section class="intro-rea white" id=intro>
+        <div class="container">
+             <img src="./images/profile.jpg" style="border-radius:50%" id=profile>
+        </div>
+    </section>
 </body>
 
 </html>
