added social media logos

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <title>Andrew Chang</title>
     <link rel="stylesheet" href="./css/style.css">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+    <!-- Font Awesome icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -23,7 +27,7 @@
             <div class="row">
                 <nav>
                     <ul>
-                        <li><a href="">About Me</a></li>
+                        <li><a href="">About</a></li>
                         <li><a href="">Experience</a></li>
                         <li><a href="">Projects</a></li>   
                     </ul>
@@ -32,10 +36,45 @@
         </div>
     </header>
 
-    <section class="intro-rea white" id=intro>
+    <section class="intro-area white" id=intro>
         <div class="container">
-             <img src="./images/profile.jpg" style="border-radius:50%" id=profile>
+            <div class="profile">
+                <img src="./images/profile.jpg" style="border-radius:50%" id=profile>
+            </div>
+            <div class="about">
+                <div class="about-header">
+                    <h1>About Me</h1>
+                </div>
+                <p>
+                    This is going to be a paragraph or two about myself.
+                </p>
+            </div>
+            <div class="social-media">
+                <ul class="nav-list">
+                    <li>
+                        <a href="https://www.facebook.com/andrew.chang621" class="icon">
+                            <i class="fa fa-facebook-square"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/andrew-chang621/" class="icon">
+                            <i class="fa fa-linkedin-square"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/andrew-chang621" class="icon">
+                            <i class="fa fa-github-square"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon">
+                            <i class="email-square"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
+        
     </section>
 </body>
 
