created projects and experience

--- a/index.html
+++ b/index.html
@@ -74,7 +74,75 @@
                 </ul>
             </div>
         </div>
-        
+    </section>
+
+    <section class="experience">
+        <div class="container">
+            <div class="experience-heading">
+                <h1>Work Experience</h1>
+            </div>
+            <div class="experience-container">
+                <ul>
+                    <li class="date" id="ucb">
+                        <h2>Education</h2>
+                        <p>
+                            Started school at University of California, Berkeley intending to major in Computer Science.
+                        </p>
+                    </li>
+                    <li class="date" id="health-tech">
+                        <h2>Smount HealthTech</h2>
+                        <p>
+                            Worked as a software engineer intern for a startup.
+                        </p>
+                    </li>
+                    <li class="date" id="ucb-ai">
+                        <h2>University of California, Berkeley</h2>
+                        <p>
+                            Academic Intern for the Electrical Engineering and Computer Science department.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="intro-area white">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <h2>Projects</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="project-card">
+                        <span></span>
+                        <h3>Camera Slider</h3>
+                        <p>
+                            About Camera Slider!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="project-card">
+                        <span></span>
+                        <h3>NetGuard</h3>
+                        <p>
+                            About Camera Slider!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="project-card">
+                        <span></span>
+                        <h3>Workout Generator</h3>
+                        <p>
+                            About Camera Slider!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
