--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="about">
                 <div class="main-header">
-                    <h1>About Me</h1>
+                    <h1>ABOUT ME</h1>
                 </div>
                 <p>
                     This is going to be a paragraph or two about myself.
@@ -79,27 +79,27 @@
     <section class="intro-area white">
         <div class="container">
             <div class="main-header">
-                <h1>Work Experience</h1>
+                <h1>EXPERIENCE</h1>
             </div>
             <div class="timeline">
                 <ul>
                     <li class="date" id="ucb">
-                        <span class="timeline-image"><img src="images/berkeley.gif"></span>
-                        <h2>Education</h2>
+                        <span class="timeline-image"><img src="images/berkeley.gif" class="image"></span>
+                        <h4>Education</h4>
                         <p>
                             Started school at University of California, Berkeley intending to major in Computer Science.
                         </p>
                     </li>
                     <li class="date" id="health-tech">
                         <span class="timeline-image"><img src=""></span>
-                        <h2>Smount HealthTech</h2>
+                        <h4>Smount HealthTech</h4>
                         <p>
-                            Worked as a software engineer intern for a startup.
+                            Worked as a software engineer intern for a startup, filler words filler words filler words filler.
                         </p>
                     </li>
                     <li class="date" id="ucb-ai">
                         <span class="timeline-image"><img src=""></span>
-                        <h2>University of California, Berkeley</h2>
+                        <h4>University of California, Berkeley</h4>
                         <p>
                             Academic Intern for the Electrical Engineering and Computer Science department.
                         </p>
@@ -113,7 +113,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 main-header">
-                    <h2>Projects</h2>
+                    <h1>PROJECTS</h1>
                 </div>
             </div>
             <div class="row">
