--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
+    <script src="main.js"></script>
 </head>
     
 <body>
@@ -36,43 +37,49 @@
         </div>
     </header>
 
-    <section class="intro-area white" id=intro>
+    <section class="intro-area landing" id=>
         <div class="container">
-            <div class="profile">
-                <img src="./images/profile.jpg" style="border-radius:50%" id=profile>
+            <h1>Andrew Chang</h1>
+        </div>
+    </section>
+
+    <section class="intro-area white" id=intro>
+        <div class="container-fluid">
+            <div class="main-header">
+                <h1>ABOUT ME</h1>
             </div>
             <div class="about">
-                <div class="main-header">
-                    <h1>ABOUT ME</h1>
+                <span><img src="./images/profile.jpg" style="border-radius:50%" id=profile></span>
+                <div class="about-content">
+                    <p>
+                        Hello! I'm Andrew, a sophomore studying Computer Science at the University of California, Berkeley. I am passionate about creating technology characterized by the intersection of
+                        efficiency. aesthetics, and entertainment. With that in mind, I am currently interested in becoming a full stack engineer, although I am also open to other realms of software engineering.
+                    </p>
                 </div>
-                <p>
-                    Hello! I'm Andrew, a sophomore studying Computer Science at the University of California, Berkeley. I am passionate about creating technology characterized by the intersection of
-                    efficiency. aesthetics, and entertainment. With that in mind, I am currently interested in becoming a full stack engineer, although I am also open to other realms of software engineering.
-                </p>
-            </div>
-            <div class="social-media">
-                <ul class="nav-list">
-                    <li>
-                        <a href="https://www.facebook.com/andrew.chang621" class="icon">
-                            <i class="fab fa-facebook-square"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/andrew-chang621/" class="icon">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/andrew-chang621" class="icon">
-                            <i class="fab fa-github-square"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="icon">
-                            <i class="email-square"></i>
-                        </a>
-                    </li>
-                </ul>
+                <div class="social-media">
+                    <ul class="nav-list">
+                        <li>
+                            <a href="https://www.facebook.com/andrew.chang621">
+                                <i class="fab fa-facebook-square"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/andrew-chang621/">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/andrew-chang621">
+                                <i class="fab fa-github-square"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-envelope-square"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
