--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Font Awesome icon library -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Aldruich">
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
