added aldrich google font

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome icon library -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Aldruich">
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Aldrich">
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
